# scoutnet

./: Cargo.toml  Makefile  README  README.md
docs/: mandoc.db  scoutnet.man1
libscoutnet/: Cargo.toml
libscoutnet/src/: lib.rs  scoutnet.rs
scoutnetpy/: .gitignore  Cargo.toml  pyproject.toml
scoutnetpy/src/: lib.rs
src/: lib.rs  main.rs
